[Stabilization fix] 5100 - Incorrect format on date fields From/To (#5101)
* truncate From and To in date fields

* +1 version

* upped version

--- a/app/react/App/scss/utilities/_utilities.scss
+++ b/app/react/App/scss/utilities/_utilities.scss
@@ -11,3 +11,9 @@
 .full-width {
   width: 100%;
 }
+
+.truncate {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
